--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
 
     <div class="mainContent">
       <div class="leftBoxes">
-        <h1>Objective</h1>
-        <h1>Summary</h1>
-        <h1>Experience</h1>
-        <h1>Skills</h1>
-        <h1>References</h1>
+        <h1 class="objContent">Objective</h1>
+        <h1 class="sumContent">Summary</h1>
+        <h1 class="expContent">Experience</h1>
       </div>
       <div class="rightBoxes">
         <div class="objContent">
@@ -111,7 +109,7 @@
       </div>
     </div>
   </div>
-  </div>
+</div>
 </body>
 
 </html>
